# Dense-linear-app

./: .gitignore  CholeskyClient.cpp  CholeskyWorker.cpp  CholeskyWorker_DAG.cpp  Dockerfile.txt  README.md  bench.csv  benchmark.c  makefile.txt  plot_grid_all.py  v6_test.c  worker_distrib_log.cpp
Cholesky_chameleon_VM/Cholesky_Chameleon_sauv/code_c/: bench_backup.csv  lapack_dpotrf_remix_c.c  lapacke_dpotrf  lapacke_dpotrf.c  v5_script_cholesky_proche_v2  v6_script_cholesky_w_residu_malloc  v6_script_cholesky_w_residu_malloc.c
Cholesky_chameleon_VM/Cholesky_Chameleon_sauv/code_c/benchmark/: bench  benchmark.c  plot_residuals_per_scheduler.py
Cholesky_chameleon_VM/benchmark_results_plots/: plot_grid_all.py
Cholesky_chameleon_VM/cho/Cholesky_Chameleon_sauv/code_c/: lapack_dpotrf_remix_c  v3_script_cholesky_x_arg_gpt.c  v5_script_cholesky_proche_v2.c  v6_script_cholesky_w_residu  v6_script_cholesky_w_residu.c
Cholesky_chameleon_VM/cho/Cholesky_Chameleon_sauv/code_c/benchmark/: makefile  v6_test
Cholesky_chameleon_VM/cho/Cholesky_Chameleon_sauv/monenv/: pyvenv.cfg
Cholesky_chameleon_VM/cho/benchmark_results_plots/: bench.csv
Cholesky_chameleon_VM/cho/docker_installation_and_bench_files/: v6_test.c
Cholesky_chameleon_VM/docker_installation_and_bench_files/: README.md
Cholesky_chameleon_VM/z/: assets.txt  audit_overlaps.py  chart.py  chart2.py  feature.py  feature2.py  generate_dataset.py  gossip2.py  pred_test.tsv  rawdata.py  rawdata_2.py  windpuller2.py  y_true_test.tsv
Cholesky_chameleon_VM/z/dataset/: DIA.csv  GLD.csv  IEF.csv  IWM.csv  QQQ.csv  SLV.csv  SPY.csv  TLT.csv  XLE.csv  XLF.csv  XLI.csv  XLK.csv  XLP.csv  XLRE.csv  XLU.csv  XLV.csv  XLY.csv  _meta_universe.tsv
cholesky_armonik/: .gitignore  CholeskyClient_DAG.cpp  Dockerfile  Dockerfile.client  Dockerfile.worker  Dockerfile.worker.v2  Dockerfile.worker.v3  Dockerfile_dev.worker  Dockerfile_dev2.worker  Dockerfile_dev4.worker  Dokerfile.client.v0  Makefile  appsetting.json  appsettings.json  client_distrib.cpp  find-deps.sh
cholesky_armonik/client/: CMakeLists.txt  Dockerfile.client.v0  Dockerfile_jsp.client.v0
cholesky_armonik/client/src/: CholeskyClient_DAG.cpp  client_distrib.cpp
cholesky_armonik/hello_docker_test/client/: CMakeLists.txt
cholesky_armonik/hello_docker_test/worker/: CMakeList.txt
cholesky_armonik/old/: CholeskyWorker_DAG.cpp  client_mono.cpp  helloclient.cpp  worker_mono.cpp
cholesky_armonik/old/old_worker_dock_config/hello_docker_test/: Dockerfile.client
cholesky_armonik/old/old_worker_dock_config/hello_docker_test/worker/src/: main.cpp
cholesky_armonik/old/old_worker_dock_config/worker/: Dockerfile.worker  appsettings.json
cholesky_armonik/old/worker/: Dockerfile.worker
cholesky_armonik/old_worker_dock_config/hello_docker_test/: Dockerfile.worker
cholesky_armonik/src/: worker_distrib.cpp  worker_distrib_qui_fonct.cpp
cholesky_armonik/w_c_cons_v1/worker_construction/: Dockerfile.worker.v4  appsettings.json
cholesky_armonik/w_c_cons_v1/worker_construction/src/: worker_distrib.cpp
cholesky_armonik/w_c_cons_v2/client_construction2/: Dockerfile.client.param.v1  appsettings.json
cholesky_armonik/w_c_cons_v2/client_construction2/client/: .dockerignore
cholesky_armonik/w_c_cons_v2/client_construction2/client/src/: client_distrib.cpp
cholesky_armonik/w_c_cons_v2/worker_construction2/src/: worker_distrib.cpp
cholesky_armonik/worker/: CMakeLists.txt  CMakeLists_orginal.txt  Dockerfile.worker  Dockerfile.worker.v3  worker_distrib_sauv.cpp
cholesky_armonik/worker/hello_docker_test/client/src/: main.cpp
cholesky_armonik/worker/src/: CholeskyWorker.cpp  CholeskyWorker_DAG.cpp  worker_distib.cpp  worker_distrib.cpp
cholesky_bench_chameleon_vm/installation/: Dockerfile  Dockerfile.txt  Makefile  README.md
cholesky_bench_chameleon_vm/installation/docker_installation_test/: Dockerfile  Makefile  Makefile_origin
cholesky_bensh_chameleon_vm/: benchmark.c  chameleon_full_stack_install.sh
cholesky_chameleon_VM/docker_installation_and_bench_files/: Dockerfile  README.md
old/: Dockerfile.worker_original
